k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks-web
  namespace: healthchecks
  labels:
    app: healthchecks
spec:
  type: ClusterIP
  selector:
    app: healthchecks
  ports:
    - name: http
      port: 80
      targetPort: 8000
